# codep

./: Makefile  README.md  requirements.in  requirements.txt  setup.cfg
codep/: __init__.py  decorators.py  partial.py  runner.py
examples/class_partials/: partials.py  run.py
examples/functional_partials/: partials.py  run.py
