[metadata]
name = codep
version = 0.0.1
description = A light-weight framework for defining and running dependent tasks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antonagestam/codep
author = Anton Agestam
author_email = git@antonagestam.se
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
py_modules = codep
install_requires =
    immutables>=0.9
    typing-extensions>=3.7.4
python_requires = >=3.7

[bdist_wheel]
universal = True

[mypy]
ignore_missing_imports = True
strict_optional = True
no_implicit_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
new_semantic_analyzer = True

[tool:pytest]
norecursedirs = .venv
addopts = --doctest-modules

[flake8]
exclude = .venv
max-complexity = 10
max-line-length = 88
# see this discussion as to why we're ignoring E722:
# https://github.com/PyCQA/pycodestyle/issues/703
# flake8-mutable gives a false positive for immutables.Map, so we ignore M511
# https://github.com/ebeweber/flake8-mutable/issues/22
extend-ignore = E722, M511
